more refactoring of bulk upsert code for additional flexibility